Mise a jour du projet

--- a/pom.xml
+++ b/pom.xml
@@ -54,17 +54,14 @@
       </plugin>
   	
   	 <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>3.1.0</version>
-            <reportSets>
-            	<reportSet>
-            		<reports>
-            			<report>checkstyle</report>
-            		</reports>
-            	</reportSet>
-            </reportSets>
-        </plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <configLocation>checkstyle.xml</configLocation>
+          <failOnViolation>false</failOnViolation>
+        </configuration>
+      </plugin>
       
   	</plugins>
   </reporting>
