--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
       <version>4.0.1</version>
 </dependency> 	
 
+<dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.10.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+
  <dependency>
   <groupId>com.google.code.findbugs</groupId>
   <artifactId>annotations</artifactId>
@@ -28,6 +35,19 @@
   
   <build>
         <plugins>
+        
+        <plugin>
+   <groupId>org.apache.cayenne.plugins</groupId>
+   <artifactId>maven-cayenne-plugin</artifactId>
+   <version>3.2M1</version>
+   <dependencies>
+      <dependency>
+        <groupId>org.apache.derby</groupId>
+        <artifactId>derbyclient</artifactId>
+        <version>10.10.1.1</version>
+      </dependency>
+   </dependencies>
+</plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -44,6 +64,28 @@
                 <configLocation>./checkstyle.xml</configLocation>
             </configuration>
         </plugin>
+        	<plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>dessin.DrawingApp</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
+      <executions>
+        <execution>
+          <id>make-assembly</id> 
+          <phase>package</phase> <!-- packaging phase -->
+          <goals>
+            <goal>single</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
 
 
         </plugins>
